VM Option configuration setup added